Fixed spacing issue so header matches content

--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ body {
     max-width: 60%;
 }
 
+.container {
+    margin-left: 50px;
+}
 form{
     margin: auto;
     width: 95%;
@@ -24,7 +27,7 @@ form{
 
 h3 {
     position: absolute;
-    left: 45px;
+    left: 64px;
     top: 0;
     padding: 18px 15px 19px;
 }
